--- a/app/pages/tables.html
+++ b/app/pages/tables.html
@@ -816,7 +816,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"> </script>
     <script src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"> </script>
     <script src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.print.min.js"> </script>
-  
+    <script src="https://cdn.datatables.net/select/1.3.1/js/dataTables.select.min.js"> </script>
+
+    
 
      <!--Custom Scripts-->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.js"></script>
